fix bugs handling  and  events. add ssl to service manifest

--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,11 +3,22 @@ kind: Service
 metadata:
   name: bzzz-ui
   namespace: default
+  annotations:
+    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
+    service.beta.kubernetes.io/do-loadbalancer-algorithm: "least_connections"
+    service.beta.kubernetes.io/do-loadbalancer-tls-ports: "443"
+    service.beta.kubernetes.io/do-loadbalancer-certificate-id: "b0a1c125-6f4d-4e11-be00-5c118e3bd8ab"
+    service.beta.kubernetes.io/do-loadbalancer-redirect-http-to-https: "true"
 spec:
+  type: LoadBalancer
   selector:
     app: bzzz-ui
   ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-  type: LoadBalancer
+  - name: http
+    protocol: TCP
+    port: 80
+    targetPort: 80
+  - name: https
+    protocol: TCP
+    port: 443
+    targetPort: 80
